# w2l-linux

./: CMakeLists.txt  README.md  main.cpp  shell.nix
cmake/: FindWav2Letter.cmake  Findfvad.cmake
derivations/: default.nix
derivations/arrayfire/: default.nix  patch-08a601f.patch  rewrite_OMP_streq.patch
derivations/cereal/: default.nix
derivations/flashlight/: default.nix  remove-cereal-external.patch
derivations/gloo/: default.nix
derivations/kenlm/: default.nix
derivations/libfvad/: default.nix
derivations/mkl-dnn/: default.nix  patch.patch
derivations/wav2letter/: default.nix
